--- a/cadastro-evento.html
+++ b/cadastro-evento.html
@@ -54,6 +54,10 @@
 
             </aside>
             <main class="col-9  p-5">
+                <p class="alert text-center message-result d-none">
+                    mensagem
+                </p>
+
                 <div class="my-5">
                     <h1>Novo evento</h1>
 
@@ -63,25 +67,25 @@
                     <form class="col-6">
                         <div class="mb-3">
                             <label for="nome" class="form-label">Nome</label>
-                            <input type="text" class="form-control" id="nome" aria-describedby="nome">
+                            <input name="name" type="text" class="form-control" id="nome" aria-describedby="nome">
                         </div>
                         <div class="mb-3">
                             <label for="atracoes" class="form-label">Atrações</label>
-                            <input type="text" class="form-control" id="atracoes" aria-describedby="atracoes">
+                            <input name="attractions" type="text" class="form-control" id="atracoes" aria-describedby="atracoes">
                             <small>insira o nome dos artistas separados por vírgula</small>
                         </div>
                         <div class="mb-3">
                             <label for="descricao" class="form-label">Descrição</label>
-                            <textarea name="descricao" id="descricao" class="form-control" rows="5"></textarea>
+                            <textarea name="description" id="descricao" class="form-control" rows="5"></textarea>
                         </div>
                         <div class="mb-3">
                             <label for="data" class="form-label">Data</label>
-                            <input type="datetime" name="data" id="data" class="form-control"
+                            <input name="scheduled" type="datetime-local" id="data" class="form-control"
                                 placeholder="00/00/00 00:00">
                         </div>
                         <div class="mb-3">
                             <label for="lotacao" class="form-label">Lotação (número de ingressos disponiveis)</label>
-                            <input type="number" class="form-control" id="lotacao" aria-describedby="lotacao">
+                            <input name="number_tickets" type="number" class="form-control" id="lotacao" aria-describedby="lotacao">
                         </div>
                         <button type="submit" class="btn btn-primary">enviar</button>
                     </form>
@@ -92,6 +96,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+
+    <script type="module" src="./js/cadastro-evento.js"></script>
 </body>
 
 </html>
