--- a/admin.html
+++ b/admin.html
@@ -55,6 +55,10 @@
             </aside>
             <main class="col-9  p-5">
                 <div class="my-5">
+                    <p class="alert alert-danger text-center message-result d-none">
+                        mensagem
+                    </p>
+
                     <h1>Gerenciamento de eventos</h1>
 
                     <a href="cadastro-evento.html" class="btn btn-primary">Novo Evento</a>
