--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
             </div>
         </section>
         <section class="full">
+            <p class="alert text-center message-result d-none">
+                mensagem
+            </p>
+
             <div class="container text-center">
                 <h2>Próximos eventos</h2>
             </div>
             <div class="next-events container d-flex justify-content-center align-items-center">
-                
+
             </div>
             <div class="container text-center">
                 <a href="eventos.html" class="btn btn-secondary">ver todos os eventos</a>
@@ -81,6 +85,38 @@
             </nav>
         </div>
     </footer>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalBooking" tabindex="-1" aria-labelledby="modalBookingLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title fw-bold" id="modalBookingLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="nome" class="form-label">Nome</label>
+                            <input name="owner_name" type="text" class="form-control" id="nome" aria-describedby="nome"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input name="owner_email" type="email" class="form-control" id="email"
+                                aria-describedby="email" required>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary d-block w-100">reservar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 
     <script type="module" src="./js/index.js"></script>
 </body>
